--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 									<h2>My name is Paul Breeding</h2>
 									<p>This is my ePortfolio for CS499 capstone course.</p>
 								</header>
-								<a href="images/CodeReviewBreeding.mp4" class="image main" target="_blank"><img src="images/codeReview.jpg" alt="Code Review" /></a>
+								<a href="https://youtu.be/FhQX06gc1T4" class="image main" target="_blank"><img src="images/codeReview.jpg" alt="Code Review" /></a>
 								<p>This is the first requirement for my final project.  It's a Code Review of the two artifacts I chose to complete the CS499 Final Project.</p>
 								<ul class="actions special">
-									<li><a href="images/CodeReviewBreeding.mp4" class="button large" target="_blank">Play Video</a></li>
+									<li><a href="https://youtu.be/FhQX06gc1T4" class="button large" target="_blank">Play Video</a></li>
 								</ul>
 							</article>
 
