--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 									<header>
 										<h2>Artifact 2</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/mongo.jpg" alt="MongoDB" /></a>
+									<p>RESTful server written in Pythona to access a MongoDB Database.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">See Code</a></li>
 									</ul>
@@ -108,7 +108,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; ePortfolio</li><li>Design: Jackilpb</li></ul>
 					</div>
 
 			</div>
