--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>ePortfolio by Paul Breeding</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -75,7 +75,7 @@
 										<h2>Artifact 2</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/mongo.jpg" alt="MongoDB" /></a>
-									<p>RESTful server written in Pythona to access a MongoDB Database.</p>
+									<p>RESTful server written in Python to perform CRUD functions and generate reports on a MongoDB Database.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">See Code</a></li>
 									</ul>
