--- a/index.html
+++ b/index.html
@@ -64,20 +64,29 @@
 									<header>
 										<h2>Artifact 1</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/IU.jpg" alt="Artifact 1 IU" /></a>
+									<a href="#" class="image fit"><img src="images/IU1.jpg" alt="Artifact 1 IU" /></a>
 									<p>My favorite moments from the IU women's basketball program.  This is an automated slide show program, written in Java with previous, next and reset buttons.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">See Code</a></li>
+									</ul>
+									<ul class="actions special">
+										<li><a href="#" class="button">Artifact 1 Narrative</a></li>
+									</ul>
+									<ul class="actions special">
+										<li><a href="#" class="button">Artifact 2 Narrative</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2>Artifact 2</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/mongo.jpg" alt="MongoDB" /></a>
+									<a href="#" class="image fit"><img src="images/mongo1.jpg" alt="MongoDB" /></a>
 									<p>RESTful server written in Python to perform CRUD functions and generate reports on a MongoDB Database.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">See Code</a></li>
+									</ul>
+									<ul class="actions special">
+										<li><a href="#" class="button">Artifact 3 Narrative</a></li>
 									</ul>
 								</article>
 								
