--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2>Artifact 1</h2>
+										<h2>Artifact 1 and 2</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/IU1.jpg" alt="Artifact 1 IU" /></a>
 									<p>My favorite moments from the IU women's basketball program.  This is an automated slide show program, written in Java with previous, next and reset buttons.</p>
