--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<header>
 										<h2>Artifact 1 and 2</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/IU1.jpg" alt="Artifact 1 IU" /></a>
+									<a href="https://github.com/jackilpb/CS499artifact1and2" target="_blank" class="image fit"><img src="images/IU1.jpg" alt="Artifact 1 IU" /></a>
 									<p>My favorite moments from the IU women's basketball program.  This is an automated slide show program, written in Java with previous, next and reset buttons.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">See Code</a></li>
