--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<a href="https://github.com/jackilpb/CS499artifact1and2" target="_blank" class="image fit"><img src="images/IU1.jpg" alt="Artifact 1 IU" /></a>
 									<p>My favorite moments from the IU women's basketball program.  This is an automated slide show program, written in Java with previous, next and reset buttons.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">See Code</a></li>
+										<li><a href="https://github.com/jackilpb/CS499artifact1and2" target="_blank" class="button">See Code</a></li>
 									</ul>
 									<ul class="actions special">
 										<li><a href="#" class="button">Artifact 1 Narrative</a></li>
