--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<li><a href="https://github.com/jackilpb/CS499artifact1and2" target="_blank" class="button">See Code</a></li>
 									</ul>
 									<ul class="actions special">
-										<li><a href="#" class="button">Artifact 1 Narrative</a></li>
+										<li><a href="A1Narrative.html" class="button">Artifact 1 Narrative</a></li>
 									</ul>
 									<ul class="actions special">
 										<li><a href="#" class="button">Artifact 2 Narrative</a></li>
