--- a/A2Narrative.html
+++ b/A2Narrative.html
@@ -19,14 +19,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Artifact 1 Narrative</a>
+						<a href="index.html" class="logo">Artifact 2 Narrative</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Back</a></li>
-							<li class="active"><a href="A1Narrative.html">Artifact 1 Narrative</a></li>
+							<li class="active"><a href="A2Narrative.html">Artifact 2 Narrative</a></li>
 						</ul>
 					</nav>
 
@@ -39,26 +39,26 @@
 									The first artifact is the slide show program originally used in CS-250 Software Development Lifecycle in September 2019.  
 									The program was a manual slideshow featuring the top 5 destinations from a travel agency with a button to advance the slide show and a button to view the previous slide.  
 									<br>
-									<b>Justify the inclusion of the artifact in your ePortfolio. Why did you select this item? What specific components of the artifact showcase your skills and abilities in software
-									 development? How was the artifact improved?</b>
+									<b>Justify the inclusion of the artifact in your ePortfolio. Why did you select this item? What specific components of the artifact showcase your skills and abilities in algorithms 
+										and data structure?  How was the artifact improved?</b>
 									<br>
 									I chose this artifact because it was a nice simple slideshow and I could greatly enhance its function while at the same time keeping the code from becoming overly complex.  
-									Adding the reset button showcased my skills in software design and engineering.  By adding the logic for the automation in with the reset button, pressing the reset button doesn’t 
-									just reset the slide show to the first slide, it also restarts the slide show automation.  The enhancements I made were to change the slides from 5 to 10.  I changed the theme of 
-									the slideshow from top 5 destinations to my 10 favorite IU women’s basketball moments.  I changed the design of the slideshow with a more appropriate team themed background.  
-									I also added a reset button.  The reset button will reset the slide show back to the first slide and restart the automation.
+									Adding the automation to the slideshow showcased my skills in algorithms and data structures.  I added a reset button and added the logic for the automation in with the reset 
+									button, pressing the reset button doesn’t just reset the slide show to the first slide, it also restarts the slide show automation.  The enhancements I made changed the slide show 
+									from a static slide show that required input from the user to view the next slide to one that automatically goes through all 10 slides once the program is started.
 									<br>
 									<b>Did you meet the course objectives you planned to meet with this enhancement in Module One?  Do you have any updates to your outcome-coverage plans? </b>
 									<br>
-									Yes, I changed the slides from 5 to 10.  I changed the theme of the slideshow from top 5 destinations to my 10 favorite IU women’s basketball moments.  I changed the design of 
-									the slideshow with a more appropriate team themed background.  I also added a reset button.  The reset button will reset the slide show back to the first slide and restart the 
-									automation.  I do not have any updates to my outcome-coverage plans.<br>
+									Yes, I added automation to the slide show.  Once you launch the program, the slides will advance through all ten slides and stop.  Each slide will be displayed for 5 seconds.  
+									If you press the reset button, the slide show will start over.  I also changed the ten if and if else statements to a single array of images.  I did this to demonstrate the use 
+									of an array data structure.  I do not have any updates to my outcome-coverage plans.
+									<br>
 									<b>Reflect on the process of enhancing and/or modifying the artifact. What did you learn as you were creating it and improving it? What challenges did you face?</b> 
 									<br>
-									The changes I made for design and engineering were pretty straight forward.  However, I still learned quite a bit while working through one of the challenges I faced.  
-									The challenge was getting the reset button to work properly.  If the next or previous button were pressed, the reset button wouldn’t work properly.  The next or previous button 
-									would affect where the slideshow reset to or what slide it would end on.  Through trial and error, I had little luck fixing this problem.  Then I realized I could fix this 
-									problem by resetting the cardIndex to 0 when the reset button was pressed.
+									I learned quite a bit while working through one of the challenges I faced.  The challenge was getting the slide show to work properly after pressing the reset button.  
+									If the next or previous button were pressed, the slide show wouldn’t continue through the entire slide show after the reset button was pressed.  For instance, if I pressed 
+									the previous button several times then pressed the reset button, the slide show would only advance through the slide show the number of times I pressed the button.  The problem 
+									was pressing either button changed the cardIndex number.  I realized I could fix this problem by resetting the cardIndex to 0 when the reset button was pressed.
 									</p>
 							</section>
 					</div>
