--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<li><a href="A1Narrative.html" class="button">Artifact 1 Narrative</a></li>
 									</ul>
 									<ul class="actions special">
-										<li><a href="#" class="button">Artifact 2 Narrative</a></li>
+										<li><a href="A2Narrative.html" class="button">Artifact 2 Narrative</a></li>
 									</ul>
 								</article>
 								<article>
@@ -83,10 +83,10 @@
 									<a href="#" class="image fit"><img src="images/mongo1.jpg" alt="MongoDB" /></a>
 									<p>RESTful server written in Python to perform CRUD functions and generate reports on a MongoDB Database.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">See Code</a></li>
+										<li><a href="A3code.html" class="button">See Code</a></li>
 									</ul>
 									<ul class="actions special">
-										<li><a href="#" class="button">Artifact 3 Narrative</a></li>
+										<li><a href="A3Narrative.html" class="button">Artifact 3 Narrative</a></li>
 									</ul>
 								</article>
 								
