--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<a href="#" class="image fit"><img src="images/mongo1.jpg" alt="MongoDB" /></a>
 									<p>RESTful server written in Python to perform CRUD functions and generate reports on a MongoDB Database.</p>
 									<ul class="actions special">
-										<li><a href="A3code.html" class="button">See Code</a></li>
+										<li><a href="A3Code.html" class="button">See Code</a></li>
 									</ul>
 									<ul class="actions special">
 										<li><a href="A3Narrative.html" class="button">Artifact 3 Narrative</a></li>
