--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<header>
 										<h2>Artifact 3</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/mongo1.jpg" alt="MongoDB" /></a>
+									<a href="A3Code.html" class="image fit"><img src="images/mongo1.jpg" alt="MongoDB" /></a>
 									<p>RESTful server written in Python to perform CRUD functions and generate reports on a MongoDB Database.</p>
 									<ul class="actions special">
 										<li><a href="A3Code.html" class="button">See Code</a></li>
