--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Welcome to my ePortfolio</h1>
-						<p>A showcase of my projects and abilities.</p>
+						<p>A showcase of my projects and abilities</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -48,8 +48,34 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h3>My name is Paul Breeding</h3>
-									<p>This is my ePortfolio for CS499 capstone course.</p>
+									<h3>My name is Paul Breeding
+										<br>
+										Professional Self-Assessment</h3>
+									<p> &nbsp;&nbsp;&nbsp;&nbsp;My path to the computer science degree has been long but rewarding.  I have always wanted a computer science degree but decided to put it on hold and focus on my military career.  
+										After I retired from the military, I took a position with a company and sank into a comfortable routine.  Completing my degree was always on my mind.  After a stressful day at 
+										work, I decided it was time to sacrifice some free time to achieve on of my life-long goals.
+										<br>
+										&nbsp;&nbsp;&nbsp;&nbsp;My journey through the computer science program exposed me to ideas and concepts I had not experienced before.  One of those concepts was using Agile software development to 
+										organize software development within a team environment.  I took on the roles of Scrum Master and Project Owner.  Utilizing these roles, I managed the project, implemented the 
+										changes and communicated with the stakeholders.
+										<br>
+										&nbsp;&nbsp;&nbsp;&nbsp;One of the most enjoyable topics was data structures and algorithms.  I have always been fascinated by how and why things work.  In CS-260 we learned about one of the more 
+										interesting uses for data structures and algorithms, fighting crime.  IBM predictive analytics teamed up with the Memphis police department and created Operation Blue Crush.  
+										Using large datasets and predictive algorithms, they reduced violent crime.<br>
+										&nbsp;&nbsp;&nbsp;&nbsp;My journey through computer science was not one without bumps.  Coding has always been my weakest link.  Software engineering and databases were a huge challenge for me.  
+										In CS-250, I was asked to modify a program.  With determination, I preserved and completed the assignment.  Overcoming my weakness in coding has been the most rewarding aspect of 
+										the computer science degree.<br>
+										&nbsp;&nbsp;&nbsp;&nbsp;Security was the most surprising aspect of my journey.  I didn’t realize I enjoyed it so much.  I used Linux and network security tools to penetrate networks and analyze their 
+										weaknesses.  After taking IT-320, I decided this was the path I wanted to pursue.  I plan on getting my masters degree in cybersecurity.<br>
+										&nbsp;&nbsp;&nbsp;&nbsp;The first artifact I chose will be used for the first two objectives, software design and engineering and algorithm and data structures.  It’s a slide show program from CS-250 and 
+										showcases my ability to improve on existing code.  For design and engineering, I intend to increase the slides from 5 to 10.  I will change the theme of the slideshow from top 5 
+										destinations to my 10 favorite moments of the IU women’s basketball.  I’ll also change the background of the slideshow to a more appropriate team themed background.  For algorithms 
+										and data structures, I will create an algorithm that automates the slide show.  It will play the slide show, then require the user to press the reset button to view the slideshow 
+										again.  I will also use an array structure for the images used in the slides.  The array will replace the numerous if and if else statements.<br>  
+										&nbsp;&nbsp;&nbsp;&nbsp;The second artifact is a RESTful API written in Python and will access a MongoDB database.  This artifact is from CS-340 Client/Server Development.  The restful API I created has 
+										basic CRUD functions.  I will add functionality by adding two routes to the code.  The first route takes a stock ticker that the user inputs and returns the year to date, 
+										quarterly and weekly performances.  The second route requires the user to input an industry.  It then prints a report of the top 5 stocks in that industry based on profit margin.
+										</p>
 								</header>
 								<a href="https://youtu.be/FhQX06gc1T4" class="image main" target="_blank"><img src="images/codeReview.jpg" alt="Code Review" /></a>
 								<p>This is the first requirement for my final project.  It's a Code Review of the two artifacts I chose to complete the CS499 Final Project.</p>
